Addd dropdown menu on hover

--- a/css-friends-02/skeleton/02-notifications.html
+++ b/css-friends-02/skeleton/02-notifications.html
@@ -20,11 +20,22 @@
       </h1>
 
       <ul class="header-list">
-        <li>
+        <li class='nav-items'>
           <a href="#" class="notification">
             <span>Notification</span>
             <span class="badge">3</span>
           </a>
+          <ul class='dropdown hidden'>
+            <li>
+              Constance likes your photo
+            </li>
+            <li>
+              Tommy left you a comment
+            </li>
+            <li>
+              Johnathan is now right behind you
+            </li>
+          </ul>
         </li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
